# NeuralNetCpp

./: CMakeLists.txt  README.md  formatCode.sh
example/: TrainMNist.cc  mNistLoader.h
include/: Layer.h  MultiLayerPerceptron.h  Neuron.h  Value.h
src/: Layer.cc  Main.cc  MultiLayerPerceptron.cc  Neuron.cc  Value.cc
